2013-04-19  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/html/omp.xsl (get_report_ports_response): Add empty severity bar
	in no-threat case.

2013-04-19  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/html/omp.xsl (severity-bar): Rename text prameter to extra_text
	for clarification. Don't add parenthesizes so that caller can define
	output format. Let notext define whether cvss is outputted or not.
	(result-detailed [result, detailed]): Add parenthesizes around threat.
	(get_report_ports_response): Add port threat value as extra text for
	severity bar.

2013-04-19  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/html/omp.xsl (html-config-family-table): Take care that for
	prognostic report there is also a colored cvss bar.

2013-04-18  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/html/omp.xsl (report-summary-sorting)
	(report-summary-sorting-link): New templates.
	(html-report-details): Use newly added templates. Move filtering section
	into the Report Results window. Fix typo getting filter_id instead of
	filter from envelope.

2013-04-18  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/html/omp.xsl (gsa:threat-max-cvss, gsa:table-row-class): New
	functions.
	(severity-bar): Add notext parameter.
	(get_report_ports_response): Change table style to output number of port
	related hosts only. Output threat as a colorized bar. Skip "general"
	ports.

2013-04-18  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (html-edit-task-form): Select existing target and
	config in dropdowns.

2013-04-18  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/html/omp.xsl (host-distance): New template.
	(get_report_hosts_response): Add Ports, Apps and Distance columns.
	Add adequate per-host and per-threat links for all table cells.
	(report [assets], get_report_hosts_response): Use host-distance
	template.

2013-04-17  Hani Benhabiles <hani.benhabiles@greenbone.net>
