@@ -71,6 +71,7 @@ typedef struct
   char *token;        ///< Session token.
   char *caller;       ///< Caller URL, for POST relogin.
   char *capabilities; ///< Capabilites of manager.
+  char *language;     ///< Accept-Language browser header.
   params_t *params;   ///< Request parameters.
 } credentials_t;
 
